stop backshadow bleed

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,16 +48,19 @@ body {
 }
 
 .carousel {
-  width: 270px;
+  width: 300px;
   margin: auto;
 }
 
+.img-wrapper {
+  padding: 15px 0;
+}
+
 .img-holder {
-  height: 150px;
-  margin-bottom: 20px;
-  -webkit-box-shadow: 0px 0px 40px -10px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0px 0px 40px -10px rgba(0,0,0,0.5);
-  box-shadow: 0px 0px 40px -10px rgba(0,0,0,0.5);
+  height: 140px;
+  -webkit-box-shadow: 0px 0px 20px -10px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 20px -10px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 20px -10px rgba(0,0,0,0.5);
 }
 
 .img-circle {
